# Git-CIPC-Python

./: README.md  pyproject.toml  requirements.txt
git_cipc/: __main__.py  check_for_cipc.py  file_handler.py  init_cicp.py  rebuild_project.py
